--- a/index.html
+++ b/index.html
@@ -1,7 +1,10 @@
 <!DOCTYPE html>
 
 <html>
+    <head>
+        <title>John's INST377 Spring Test Page</title>
+    </head>
     <body>
-        <img src="\Users\johnhenrici\Desktop\Washingtoncapitals.png" alt="My test image">
+        <img src="images/Washingtoncapitals.png" alt="My test image">
     </body>
 </html>
