--- a/Lab_2/index.html
+++ b/Lab_2/index.html
@@ -1,17 +1,56 @@
+<!DOCTYPE html>
+
+<html>
+    <head>
+        <meta charset = "utf-8">
+        <style>
+            body {
+  max-width: 800px;
+  margin: 0 auto;
+}
+
+.sender-column {
+  text-align: right;
+}
+
+h1 {
+  font-size: 1.5em;
+}
+
+h2 {
+  font-size: 1.3em;
+}
+
+p,ul,ol,dl,address {
+  font-size: 1.1em;
+}
+
+p, li, dd, dt, address {
+  line-height: 1.5;
+}
+        </style>
+        <title>Lab 2: Marking Up a Letter</title>
+    </head>
+    <body>
+<address>
 Dr. Terra Nova
 Faculty of Information
 University of Maryland
 College Park, MD 20742
 USA
-Tel: 123-456-7890
-Email: no_reply@example.com
+<a href = "tel:+11234567890">Tel: 123-456-7890</a>
+<a href = "mailto:no_reply@example.com">Email: no_reply@example.com</a>
+</address>
+
 26 Sept 2020
 
+<address>
 Rev. Dover Cliff
 1861 Roses Way
 Glasgow, CT9 XXX
 UK
-Re: Dover Cliff university application
+</address>
+<h1>Re: Dover Cliff university application</h1>
 Dear Dover,
 
 Thank you for your recent application to join us at UMD's iSchool to study for your undergraduate in 2020. I will answer your questions one by one, in the following sections.
@@ -53,3 +92,5 @@ UMD motto:
 
 "Fear the Turtle"
 -- How did this happen, anyway.
+    </body>
+</html>
