--- a/Lab_2/index.html
+++ b/Lab_2/index.html
@@ -33,23 +33,24 @@ p, li, dd, dt, address {
     </head>
     <body>
 <address>
-Dr. Terra Nova
-Faculty of Information
-University of Maryland
-College Park, MD 20742
-USA
-<a href = "tel:+11234567890">Tel: 123-456-7890</a>
+<b>Dr. Terra Nova</b><br>
+Faculty of Information<br>
+University of Maryland<br>
+College Park, MD 20742<br>
+USA<br>
+<a href = "tel:+11234567890">Tel: 123-456-7890</a><br>
 <a href = "mailto:no_reply@example.com">Email: no_reply@example.com</a>
 </address>
 
 26 Sept 2020
 
 <address>
-Rev. Dover Cliff
-1861 Roses Way
-Glasgow, CT9 XXX
+Rev. Dover Cliff<br>
+1861 Roses Way<br>
+Glasgow, CT9 XXX<br>
 UK
 </address>
+
 <h1>Re: Dover Cliff university application</h1>
 Dear Dover,
 
