--- a/Lab_2/index.html
+++ b/Lab_2/index.html
@@ -29,44 +29,48 @@ p, li, dd, dt, address {
   line-height: 1.5;
 }
         </style>
-        <title>Lab 2: Marking Up a Letter</title>
+        <title>Lab 2 - Structure a letter</title>
     </head>
     <body>
-<address>
+<address align = "right">
 <b>Dr. Terra Nova</b><br>
 Faculty of Information<br>
 University of Maryland<br>
 College Park, MD 20742<br>
 USA<br>
 <a href = "tel:+11234567890">Tel: 123-456-7890</a><br>
-<a href = "mailto:no_reply@example.com">Email: no_reply@example.com</a>
+<a href = "mailto:no_reply@example.com">Email: no_reply@example.com</a><br>
 </address>
 
-26 Sept 2020
+<p align = "right">26 Sept 2020</p>
 
 <address>
-Rev. Dover Cliff<br>
+<b><abbr title = "Reverend">Rev.</abbr> Dover Cliff</b><br>
 1861 Roses Way<br>
 Glasgow, CT9 XXX<br>
 UK
 </address>
 
-<h1>Re: Dover Cliff university application</h1>
-Dear Dover,
+<h1>Re: Dover Cliff university application</h1><br>
 
-Thank you for your recent application to join us at UMD's iSchool to study for your undergraduate in 2020. I will answer your questions one by one, in the following sections.
+<p>Dear Dover,</p><br>
 
-Starting dates
-We are happy to accommodate you starting your study with us at any time, however it would suit us better if you could start at the beginning of a semester; the start dates for each one are as follows:
+<p>Thank you for your recent application to join us at UMD's iSchool to study for your undergraduate in 2020. I will answer your questions one by one, in the following sections.</p>
 
-First semester: 29 August 2020
-Second semester: 22 January 2021
-Third semester: 2 May 2021
-Please let me know if this is ok, and if so which start date you would prefer.
+<h2>Starting dates</h2>
+<p>We are happy to accommodate you starting your study with us at any time, however it would suit us better if you could start at the beginning of a semester; the start dates for each one are as follows:</p>
 
-You can find more information about important university dates on our website.
+<ul>
+  <li>First semester: 29 August 2020</li>
+  <li>Second semester: 22 January 2021</li>
+  <li>Third semester: 2 May 2021</li>
+</ul>
 
-Subjects of study
+<p>Please let me know if this is ok, and if so which start date you would prefer.</p>
+
+<p>You can find more information about important university dates on our website.</p>
+
+<h2>Subjects of study</h2>
 At the iSchool, we have a pretty open-minded research facility — as long as the subjects fall somewhere in the realm of information studies. You seem like a committed researcher, and just the kind of person we'd like to have on our team. Saying that, of the ideas you submitted we were most intrigued by are as follows, in order of priority:
 
 Turning H2O into wine, and the health benefits of Resveratrol (C14H12O3.)
@@ -74,7 +78,7 @@ Measuring the effect on performance of funk bassplayers at temperatures exceedin
 HTML and CSS constructs for representing musical scores.
 So please can you provide more information on each of these subjects, including how long you'd expect the research to take, required staff and other resources, and anything else you think we'd need to know? Thanks.
 
-Animals of the Extended Perambulation
+<h2>Animals of the Extended Perambulation</h2>
 Yes, you are right! As part of my post-doctorate work, I did study animals. To answer your question, my favourite creatures are as follows, with definitions:
 
 The Canadian Polar bear
