--- a/Lab_2/index.html
+++ b/Lab_2/index.html
@@ -51,13 +51,14 @@ Glasgow, CT9 XXX<br>
 UK
 </address>
 
-<h1>Re: Dover Cliff university application</h1><br>
+<h1>Re: Dover Cliff university application</h1>
 
-<p>Dear Dover,</p><br>
+<p>Dear Dover,</p>
 
 <p>Thank you for your recent application to join us at UMD's iSchool to study for your undergraduate in 2020. I will answer your questions one by one, in the following sections.</p>
 
 <h2>Starting dates</h2>
+
 <p>We are happy to accommodate you starting your study with us at any time, however it would suit us better if you could start at the beginning of a semester; the start dates for each one are as follows:</p>
 
 <ul>
@@ -71,31 +72,39 @@ UK
 <p>You can find more information about important university dates on our website.</p>
 
 <h2>Subjects of study</h2>
-At the iSchool, we have a pretty open-minded research facility — as long as the subjects fall somewhere in the realm of information studies. You seem like a committed researcher, and just the kind of person we'd like to have on our team. Saying that, of the ideas you submitted we were most intrigued by are as follows, in order of priority:
 
-Turning H2O into wine, and the health benefits of Resveratrol (C14H12O3.)
-Measuring the effect on performance of funk bassplayers at temperatures exceeding 30°C (86°F), when the audience size exponentially increases (effect of 3 × 103 increasing to 3 × 104.)
-HTML and CSS constructs for representing musical scores.
-So please can you provide more information on each of these subjects, including how long you'd expect the research to take, required staff and other resources, and anything else you think we'd need to know? Thanks.
+<p>At the iSchool, we have a pretty open-minded research facility — as long as the subjects fall somewhere in the realm of information studies. You seem like a committed researcher, and just the kind of person we'd like to have on our team. Saying that, of the ideas you submitted we were most intrigued by are as follows, in order of priority:</p>
+
+<ol>
+<li>Turning H2O into wine, and the health benefits of Resveratrol (C<sub>14</sub>H<sub>12</sub>O<sub>3</sub>).</li>
+<li>Measuring the effect on performance of funk bassplayers at temperatures exceeding 30°C (86°F), when the audience size exponentially increases (effect of 3 × 10<sup>3</sup> increasing to 3 × 10<sup>4</sup>.)</li>
+<li><abbr title = "Hypertext Markup Language">HTML</abbr> and <abbr title = "Cascading Style Sheets">CSS</abbr> constructs for representing musical scores.</li>
+</ol>
+
+<p>So please can you provide more information on each of these subjects, including how long you'd expect the research to take, required staff and other resources, and anything else you think we'd need to know? Thanks.</p>
 
 <h2>Animals of the Extended Perambulation</h2>
-Yes, you are right! As part of my post-doctorate work, I did study animals. To answer your question, my favourite creatures are as follows, with definitions:
 
-The Canadian Polar bear
-A large predator, very hungry these days. Feeds almost entirely on seal.
-The elk
-An elk is a horned ungulate found primarily in the mountainous regions of British Columbia. It can be seen from railways, and also frequently visits the Banff centre for the arts.
-The red-tailed hawk
-An interesting example of historic misinformation: many people believe eagles make the screaming noise associated with them on film. This cry is instead the call of the red-tail.
-For more of my research, see my research page (http://umd.edu).
+<p>Yes, you are right! As part of my post-doctorate work, I did study animals. To answer your question, my favourite creatures are as follows, with definitions:</p>
 
-Yours sincerely,
+<dl>
+<dt>The Canadian Polar bear</dt>
+<dd>A large predator, very hungry these days. Feeds almost entirely on seal.</dd>
+<dt>The elk</dt>
+<dd>An elk is a horned ungulate found primarily in the mountainous regions of British Columbia. It can be seen from railways, and also frequently visits the Banff centre for the arts.</dd>
+<dt>The red-tailed hawk</dt>
+<dd>An interesting example of historic misinformation: many people believe eagles make the screaming noise associated with them on film. This cry is instead the call of the red-tail.</dd>
+</dl>
 
-Dr Terra Nova
+<p>For more of my research, see my research page <a href = "umd.edu">http://umd.edu</a>.</p>
 
-UMD motto:
+<p>Yours sincerely,</p>
 
-"Fear the Turtle"
--- How did this happen, anyway.
+<p>Dr. Terra Nova</p>
+
+<p>UMD motto:</p>
+
+<p>"Fear the Turtle"</p>
+<p>-- How did this happen, anyway.</p>
     </body>
 </html>
