--- a/Lab_2/index.html
+++ b/Lab_2/index.html
@@ -38,8 +38,8 @@ Faculty of Information<br>
 University of Maryland<br>
 College Park, MD 20742<br>
 USA<br>
-<a href = "tel:+11234567890">Tel: 123-456-7890</a><br>
-<a href = "mailto:no_reply@example.com">Email: no_reply@example.com</a><br>
+Tel: 123-456-7890<br>
+Email: no_reply@example.com<br>
 </address>
 
 <p align = "right">26 Sept 2020</p>
@@ -96,15 +96,15 @@ UK
 <dd>An interesting example of historic misinformation: many people believe eagles make the screaming noise associated with them on film. This cry is instead the call of the red-tail.</dd>
 </dl>
 
-<p>For more of my research, see my research page <a href = "umd.edu">http://umd.edu</a>.</p>
+<p>For more of my research, see <a href = "http://umd.edu">my research page </a>.</p>
 
 <p>Yours sincerely,</p>
 
 <p>Dr. Terra Nova</p>
 
-<p>UMD motto:</p>
+<p>UMD motto:
 
-<p>"Fear the Turtle"</p>
-<p>-- How did this happen, anyway.</p>
+"Fear the Turtle"
+  -- How did this happen, anyway.</p>
     </body>
 </html>
