--- a/Lab_2/index.html
+++ b/Lab_2/index.html
@@ -38,8 +38,8 @@ Faculty of Information<br>
 University of Maryland<br>
 College Park, MD 20742<br>
 USA<br>
-Tel: 123-456-7890<br>
-Email: no_reply@example.com<br>
+<b>Tel:</b> 123-456-7890<br>
+<b>Email:</b> no_reply@example.com<br>
 </address>
 
 <p align = "right">26 Sept 2020</p>
