--- a/Lab_2/index.html
+++ b/Lab_2/index.html
@@ -1,110 +1,169 @@
 <!DOCTYPE html>
 
 <html>
-    <head>
-        <meta charset = "utf-8">
-        <style>
-            body {
-  max-width: 800px;
-  margin: 0 auto;
-}
+  <head>
+    <meta charset="utf-8" />
+    <style>
+      body {
+        max-width: 800px;
+        margin: 0 auto;
+      }
 
-.sender-column {
-  text-align: right;
-}
+      .sender-column {
+        text-align: right;
+      }
 
-h1 {
-  font-size: 1.5em;
-}
+      h1 {
+        font-size: 1.5em;
+      }
 
-h2 {
-  font-size: 1.3em;
-}
+      h2 {
+        font-size: 1.3em;
+      }
 
-p,ul,ol,dl,address {
-  font-size: 1.1em;
-}
+      p,
+      ul,
+      ol,
+      dl,
+      address {
+        font-size: 1.1em;
+      }
 
-p, li, dd, dt, address {
-  line-height: 1.5;
-}
-        </style>
-        <title>Lab 2 - Structure a letter</title>
-    </head>
-    <body>
-<address align = "right">
-<b>Dr. Terra Nova</b><br>
-Faculty of Information<br>
-University of Maryland<br>
-College Park, MD 20742<br>
-USA<br>
-<b>Tel:</b> 123-456-7890<br>
-<b>Email:</b> no_reply@example.com<br>
-</address>
+      p,
+      li,
+      dd,
+      dt,
+      address {
+        line-height: 1.5;
+      }
+    </style>
+    <title>Lab 2 - Structure a letter</title>
+  </head>
+  <body>
+    <address align="right">
+      <b>Dr. Terra Nova</b><br />
+      Faculty of Information<br />
+      University of Maryland<br />
+      College Park, MD 20742<br />
+      USA<br />
+      <b>Tel:</b> 123-456-7890<br />
+      <b>Email:</b> no_reply@example.com<br />
+    </address>
 
-<p align = "right">26 Sept 2020</p>
+    <p align="right"><time datetime = "2020-09-26">26 Sept 2020</time></p>
 
-<address>
-<b><abbr title = "Reverend">Rev.</abbr> Dover Cliff</b><br>
-1861 Roses Way<br>
-Glasgow, CT9 XXX<br>
-UK
-</address>
+    <address>
+      <b>Rev. Dover Cliff</b><br />
+      1861 Roses Way<br />
+      Glasgow, CT9 XXX<br />
+      UK
+    </address>
 
-<h1>Re: Dover Cliff university application</h1>
+    <h1>Re: Dover Cliff university application</h1>
 
-<p>Dear Dover,</p>
+    <p>Dear Dover,</p>
 
-<p>Thank you for your recent application to join us at UMD's iSchool to study for your undergraduate in 2020. I will answer your questions one by one, in the following sections.</p>
+    <p>
+      Thank you for your recent application to join us at UMD's iSchool to study
+      for your undergraduate in 2020. I will answer your questions one by one,
+      in the following sections.
+    </p>
 
-<h2>Starting dates</h2>
+    <h2>Starting dates</h2>
 
-<p>We are happy to accommodate you starting your study with us at any time, however it would suit us better if you could start at the beginning of a semester; the start dates for each one are as follows:</p>
+    <p>
+      We are happy to accommodate you starting your study with us at any time,
+      however it would suit us better if you could start at the beginning of a
+      semester; the start dates for each one are as follows:
+    </p>
 
-<ul>
-  <li>First semester: 29 August 2020</li>
-  <li>Second semester: 22 January 2021</li>
-  <li>Third semester: 2 May 2021</li>
-</ul>
+    <ul>
+      <li>First semester: <time datetime = "2020-08-29">29 August 2020</time></li>
+      <li>Second semester: <time datetime = "2021-01-22">22 January 2021</time></li>
+      <li>Third semester: <time datetime = "2021-05-02">2 May 2021</time></li>
+    </ul>
 
-<p>Please let me know if this is ok, and if so which start date you would prefer.</p>
+    <p>
+      Please let me know if this is ok, and if so which start date you would
+      prefer.
+    </p>
 
-<p>You can find more information about important university dates on our website.</p>
+    <p>
+      You can find more information about important university dates on <a href="http://umd.edu">our
+      website.</a>
+    </p>
 
-<h2>Subjects of study</h2>
+    <h2>Subjects of study</h2>
 
-<p>At the iSchool, we have a pretty open-minded research facility — as long as the subjects fall somewhere in the realm of information studies. You seem like a committed researcher, and just the kind of person we'd like to have on our team. Saying that, of the ideas you submitted we were most intrigued by are as follows, in order of priority:</p>
+    <p>
+      At the iSchool, we have a pretty open-minded research facility — as long
+      as the subjects fall somewhere in the realm of information studies. You
+      seem like a committed researcher, and just the kind of person we'd like to
+      have on our team. Saying that, of the ideas you submitted we were most
+      intrigued by are as follows, in order of priority:
+    </p>
 
-<ol>
-<li>Turning H2O into wine, and the health benefits of Resveratrol (C<sub>14</sub>H<sub>12</sub>O<sub>3</sub>).</li>
-<li>Measuring the effect on performance of funk bassplayers at temperatures exceeding 30°C (86°F), when the audience size exponentially increases (effect of 3 × 10<sup>3</sup> increasing to 3 × 10<sup>4</sup>.)</li>
-<li><abbr title = "Hypertext Markup Language">HTML</abbr> and <abbr title = "Cascading Style Sheets">CSS</abbr> constructs for representing musical scores.</li>
-</ol>
+    <ol>
+      <li>
+        Turning H2O into wine, and the health benefits of Resveratrol
+        (C<sub>14</sub>H<sub>12</sub>O<sub>3</sub>).
+      </li>
+      <li>
+        Measuring the effect on performance of funk bassplayers at temperatures
+        exceeding 30°C (86°F), when the audience size exponentially increases
+        (effect of 3 × 10<sup>3</sup> increasing to 3 × 10<sup>4</sup>.)
+      </li>
+      <li>
+        <abbr title="Hypertext Markup Language">HTML</abbr> and
+        <abbr title="Cascading Style Sheets">CSS</abbr> constructs for
+        representing musical scores.
+      </li>
+    </ol>
 
-<p>So please can you provide more information on each of these subjects, including how long you'd expect the research to take, required staff and other resources, and anything else you think we'd need to know? Thanks.</p>
+    <p>
+      So please can you provide more information on each of these subjects,
+      including how long you'd expect the research to take, required staff and
+      other resources, and anything else you think we'd need to know? Thanks.
+    </p>
 
-<h2>Animals of the Extended Perambulation</h2>
+    <h2>Animals of the Extended Perambulation</h2>
 
-<p>Yes, you are right! As part of my post-doctorate work, I did study animals. To answer your question, my favourite creatures are as follows, with definitions:</p>
+    <p>
+      Yes, you are right! As part of my post-doctorate work, I did study
+      animals. To answer your question, my favourite creatures are as follows,
+      with definitions:
+    </p>
 
-<dl>
-<dt>The Canadian Polar bear</dt>
-<dd>A large predator, very hungry these days. Feeds almost entirely on seal.</dd>
-<dt>The elk</dt>
-<dd>An elk is a horned ungulate found primarily in the mountainous regions of British Columbia. It can be seen from railways, and also frequently visits the Banff centre for the arts.</dd>
-<dt>The red-tailed hawk</dt>
-<dd>An interesting example of historic misinformation: many people believe eagles make the screaming noise associated with them on film. This cry is instead the call of the red-tail.</dd>
-</dl>
+    <dl>
+      <dt>The Canadian Polar bear</dt>
+      <dd>
+        A large predator, very hungry these days. Feeds almost entirely on seal.
+      </dd>
+      <dt>The elk</dt>
+      <dd>
+        An elk is a horned ungulate found primarily in the mountainous regions
+        of British Columbia. It can be seen from railways, and also frequently
+        visits the Banff centre for the arts.
+      </dd>
+      <dt>The red-tailed hawk</dt>
+      <dd>
+        An interesting example of historic misinformation: many people believe
+        eagles make the screaming noise associated with them on film. This cry
+        is instead the call of the red-tail.
+      </dd>
+    </dl>
 
-<p>For more of my research, see <a href = "http://umd.edu">my research page</a>.</p>
+    <p>
+      For more of my research, see
+      <a href="http://umd.edu">my research page</a>.
+    </p>
 
-<p>Yours sincerely,</p>
+    <p>Yours sincerely,</p>
 
-<p>Dr. Terra Nova</p>
+    <p>Dr. Terra Nova</p>
 
-<p>UMD motto:
-
-"Fear the Turtle"
-  -- How did this happen, anyway.</p>
-    </body>
+    <p>UMD motto:<br />
+      "Fear the Turtle"<br />
+      -- How did this happen, anyway.</p>
+  </body>
 </html>
