--- a/Lab_2/index.html
+++ b/Lab_2/index.html
@@ -105,7 +105,7 @@
 
     <ol>
       <li>
-        Turning H2O into wine, and the health benefits of Resveratrol
+        Turning H<sub>2</sub>O into wine, and the health benefits of Resveratrol
         (C<sub>14</sub>H<sub>12</sub>O<sub>3</sub>).
       </li>
       <li>
