--- a/Lab_2/index.html
+++ b/Lab_2/index.html
@@ -90,7 +90,7 @@
 
     <p>
       You can find more information about important university dates on <a href="http://umd.edu">our
-      website.</a>
+      website</a>.
     </p>
 
     <h2>Subjects of study</h2>
