--- a/Assignment 1/index.html
+++ b/Assignment 1/index.html
@@ -2,60 +2,48 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>Lab 3 - Structuring A Page of Content</title>
+    <title>Assignment 1: HTML & CSS</title>
     <link rel="stylesheet" href="style.css">
-
-    <!--[if lt IE 9]>
-      <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
-    <![endif]-->
   </head>
 
   <body>
 
     <div class="head">
-    <header>  
-    <h1>John Henrici</h1>
-      <img id="pic" src="dove.png" alt="a simple dove logo">
+      <header>  
+        <h1 class="headtext">John Henrici</h1>
+        <img class="headpic" src="umd.png" alt="UMD logo">
+      </header>
+    </div>
 
-    <nav>
-      <ul>
-        <li><span>Home</span></li>
-        <li><a href="#">Get started</a></li>
-        <li><a href="#">Photos</a></li>
-        <li><a href="#">Gear</a></li>
-        <li><a href="#">Forum</a></li>
-      </ul>
-    </nav>
-  </header>
-</div>
+    <div class="wrapper">
+      <div class="contentbody">
+        <img src="datascience.jpg" alt="Data science">
+        <p>To become an information professional in the field of data science, consulting, or a mix of both.</p>
+      </div>
 
-<div class="row">
-  <div class="column">
-    <article>
-    <h2>Welcome</h2>
-
-      <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</p>
-    </article>
-  </div>
-
-  <div class="column" style="padding-left: 5px;">
-    <aside>
-      <section>
-      <h2>Favourite photos</h2>
-
-      <img src="dog1.jpg" alt="Small puppy">
-      <img src="dog2.jpg" alt="Small golden retriever">
-      <img src="cat1.jpg" alt="Happy cat">
-      <img src="cat2.jpg" alt="Kitten">
-    </section>
-    </aside>
-  </div>
-  </div>
-
-  <div class="foot">
-    <footer>
-      <p>This website example has been written by John Henrici, 2020.</p>
-    </footer>
+      <div class="workhistory">
+        <h2>Work History</h2>
+        <ol>
+          <li><h4>Data Analyst/Team Lead - U.S. Department of Housing and Urban Development</h4></li>
+          <ul>
+            <li>Managed 2 other team members to examine over 40,000 properties in the Low-Income Housing Tax Credit program</li>
+            <li>Analyzed property trends and opportunity zones using R to identify areas in need of low-income housing</li>
+            <li>Created a data brief about the program to be published and used by congressional staffers</li>
+          </ul>
+          <li><h4>Process Consulting Intern - Innovate Maryland Consulting Practicum</h4></li>
+          <ul>
+            <li>Worked in a team of 6 students managed by University of Maryland faculty to examine problems with the Limited Enrollment Program application process for the Office of Undergraduate Admissions (OUA)</li>
+            <li>Provided the OUA with 8 recommendations to increase transparency of the Limited Enrollment Programs</li>
+            <li>Presented project to stakeholders and key higher education executives</li>
+          </ul>
+          <li><h4>IT Technician - Terrapin Tech (University of Maryland)</h4></li>
+          <ul>
+            <li>Provide customer service and IT support to walk-in students, faculty and staff at the University of Maryland</li>
+            <li>Troubleshoot and diagnose issues with hardware and software supported by the Division of IT</li>
+            <li>Complete hardware repairs on Apple and Dell products</li>
+          </ul>
+        </ol>
+      </div>
     </div>
 
   </body>
