--- a/Assignment_1/index.html
+++ b/Assignment_1/index.html
@@ -1,15 +1,15 @@
 <!DOCTYPE html>
-<html>
+<html class="html">
   <head>
     <meta charset="utf-8">
     <title>Assignment 1: HTML & CSS</title>
     <link rel="stylesheet" href="style.css">
   </head>
 
-  <body>
+  <body class="body">
 
     <div class="head">
-      <header>  
+      <header class="header">  
         <h1 class="headtext">John Henrici</h1>
         <img class="headpic" src="umd.png" alt="UMD logo">
       </header>
@@ -17,12 +17,12 @@
 
     <div class="wrapper">
       <div class="contentbody">
-        <img src="datascience.jpg" alt="Data science">
+        <img class="bodypic" src="datascience.jpg" alt="Data science">
         <p>To become an information professional in the field of data science, consulting, or a mix of both.</p>
       </div>
 
       <div class="workhistory">
-        <h2>Work History</h2>
+        <h2 class="contenthead">Work History</h2>
         <ol>
           <li><h4>Data Analyst/Team Lead - U.S. Department of Housing and Urban Development</h4></li>
           <ul>
