--- a/Assignment_1/index.html
+++ b/Assignment_1/index.html
@@ -8,8 +8,8 @@
 
   <body class="body">
 
-    <div class="head">
-      <header class="header">  
+    <div>
+      <header class="header">
         <h1 class="headtext">John Henrici</h1>
         <img class="headpic" src="umd.png" alt="UMD logo">
       </header>
