--- a/Assignment_1/index.html
+++ b/Assignment_1/index.html
@@ -18,7 +18,7 @@
     <div class="wrapper">
       <div class="contentbody">
         <img class="bodypic" src="datascience.jpg" alt="Data science">
-        <p>To become an information professional in the field of data science, consulting, or a mix of both.</p>
+        <p class="caption">To become an information professional in the field of data science, consulting, or a mix of both.</p>
       </div>
 
       <div class="workhistory">
