--- a/Lab_5/index.html
+++ b/Lab_5/index.html
@@ -6,6 +6,8 @@
     <title>Lab 5</title>
 </head>
 <body>
-    <header><h1>John Henrici's List of Countries</h1></header>
+    <div>
+        <header><h1>John Henrici's List of Countries</h1></header>
+    </div>
 </body>
 </html>
