--- a/Lab_6/index.html
+++ b/Lab_6/index.html
@@ -16,8 +16,8 @@
                     <input type="text" id="name" name="user_name" maxlength="140">
                 </li>
                 <li>
-                    <label for="interests"><strong>Interests</strong></label><br>
-                    <textarea id="interersts" name="user_interests" rows="5" cols="33">This is filled by default. Enter your interests here</textarea>
+                    <label for="interest"><strong>Interests</strong></label><br>
+                    <textarea id="intererst" name="user_interests" rows="5" cols="33">This is filled by default. Enter your interests here</textarea>
                 </li>
                 <li>
                     <button type="submit">Submit</button>
